Modificado webservice Platos por Plato

--- a/Figaro/Figaro/App.xaml
+++ b/Figaro/Figaro/App.xaml
@@ -1,10 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:configuration="clr-namespace:Figaro.Configuration;assembly=Figaro"
              x:Class="Figaro.App">
   <Application.Resources>
 
     <!-- Application resource dictionary -->
-
+    <ResourceDictionary>
+      <configuration:ViewModelLocator x:Key="ViewModelLocator"/>
+      <!--<viewModels:MainViewModel x:Key="MainViewModel"/>-->
+    </ResourceDictionary>
   </Application.Resources>
 </Application>
