--- a/WebServicesFigaro/Views/PlatoMvc/Edit.cshtml
+++ b/WebServicesFigaro/Views/PlatoMvc/Edit.cshtml
@@ -84,7 +84,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Ingredientes, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Ingredientes, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Ingredientes, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Ingredientes, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -92,7 +92,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Utensilios, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Utensilios, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Utensilios, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Utensilios, "", new { @class = "text-danger" })
             </div>
         </div>
