Filtro TipoCocina añadido

--- a/WebServicesFigaro/Views/PlatoMvc/Details.cshtml
+++ b/WebServicesFigaro/Views/PlatoMvc/Details.cshtml
@@ -34,6 +34,10 @@
             @Html.DisplayFor(model => model.Imagen)
         </dd>
 
+        <dd>
+            <img src="@Html.DisplayFor(model => model.Imagen)" style="width 200px;">
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.TiempoCocinado)
         </dt>
