--- a/WebServicesFigaro/Views/PlatoMvc/Delete.cshtml
+++ b/WebServicesFigaro/Views/PlatoMvc/Delete.cshtml
@@ -12,6 +12,14 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.TipoCocina.Titulo)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TipoCocina.Titulo)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Titulo)
         </dt>
 
@@ -25,6 +33,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.Descripcion)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Imagen)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Imagen)
         </dd>
 
         <dt>
@@ -44,14 +60,6 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Valoracion)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Valoracion)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.Precio)
         </dt>
 
@@ -60,11 +68,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TipoCocina)
+            @Html.DisplayNameFor(model => model.Valoracion)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.TipoCocina)
+            @Html.DisplayFor(model => model.Valoracion)
         </dd>
 
         <dt>
