--- a/WebServicesFigaro/Views/PlatoMvc/Details.cshtml
+++ b/WebServicesFigaro/Views/PlatoMvc/Details.cshtml
@@ -11,6 +11,14 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.TipoCocina.Titulo)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TipoCocina.Titulo)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Titulo)
         </dt>
 
@@ -34,10 +42,6 @@
             @Html.DisplayFor(model => model.Imagen)
         </dd>
 
-        <dd>
-            <img src="@Html.DisplayFor(model => model.Imagen)" style="width 200px;">
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.TiempoCocinado)
         </dt>
@@ -55,14 +59,6 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Valoracion)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Valoracion)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.Precio)
         </dt>
 
@@ -71,11 +67,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TipoCocina)
+            @Html.DisplayNameFor(model => model.Valoracion)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.TipoCocina)
+            @Html.DisplayFor(model => model.Valoracion)
         </dd>
 
         <dt>
