--- a/WebServicesFigaro/Views/PlatoMvc/Edit.cshtml
+++ b/WebServicesFigaro/Views/PlatoMvc/Edit.cshtml
@@ -58,14 +58,6 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Valoracion, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Valoracion, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Valoracion, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
             @Html.LabelFor(model => model.Precio, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Precio, new { htmlAttributes = new { @class = "form-control" } })
@@ -74,10 +66,18 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TipoCocina, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Valoracion, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TipoCocina, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TipoCocina, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Valoracion, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Valoracion, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.TipoCocinaId, "TipoCocinaId", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("TipoCocinaId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.TipoCocinaId, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -92,7 +92,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Ingredientes, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.Ingredientes, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Ingredientes, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Ingredientes, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -100,7 +100,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Utensilios, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.Utensilios, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Utensilios, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Utensilios, "", new { @class = "text-danger" })
             </div>
         </div>
