--- a/Figaro/Figaro/Views/MainPage.xaml
+++ b/Figaro/Figaro/Views/MainPage.xaml
@@ -11,7 +11,7 @@
   </ContentPage.BindingContext>-->
 
   <StackLayout Orientation="Vertical">
-    <Button Text="Añadir Plato"
+    <!--<Button Text="Añadir Plato"
             Clicked="Button_OnClicked" />
 
     <Button Text="Buscar Platos"
@@ -22,7 +22,7 @@
     <Button Text="Actualizar"
         TextColor="White"
         BackgroundColor="Green"
-        Command="{Binding Refresh}" />
+        Command="{Binding Refresh}" />-->
 
     <ActivityIndicator IsRunning="{Binding IsBusy}"
                        IsVisible="{Binding IsBusy}" />
@@ -33,8 +33,10 @@
               ItemTapped="ListView_OnItemTapped">
       <ListView.ItemTemplate>
         <DataTemplate>
-          <ViewCell>
-            <StackLayout Orientation="Horizontal" Padding="12,6">
+           <ViewCell>
+             <StackLayout Orientation="Horizontal" Padding="12,6">
+              <Image Source="{Binding Imagen}" 
+                     Width ="{Binding ImageSize}" Height ="{Binding ImageSize}"/>
               <Label Text="{Binding Titulo}"
                      FontSize="24"/>
               <Label Text="{Binding Descripcion}" 
