--- a/WebServicesFigaro/Views/PlatoMvc/Details.cshtml
+++ b/WebServicesFigaro/Views/PlatoMvc/Details.cshtml
@@ -40,6 +40,7 @@
 
         <dd>
             @Html.DisplayFor(model => model.Imagen)
+            <img src="@Url.Content(Model.Imagen)" alt="Imagen Plato" style="width:400px" />
         </dd>
 
         <dt>
