--- a/Figaro/Figaro/Views/SeleccionarTipoComida.xaml
+++ b/Figaro/Figaro/Views/SeleccionarTipoComida.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Figaro.SeleccionarTipoComida"
              xmlns:local="clr-namespace:Figaro;assembly=Figaro;"
-             BindingContext="{Binding MainViewModel, Source={StaticResource ViewModelLocator}}">
+             BindingContext="{Binding MainViewModel, Source={StaticResource ViewModelLocator}}"
+             Title="Figaro"
+             BackgroundColor="#CC0311">
   <MasterDetailPage.Master>
     <ContentPage Title="Figaro">
       <StackLayout Orientation="Vertical">
@@ -26,6 +28,6 @@
     </ContentPage>
   </MasterDetailPage.Master>
   <MasterDetailPage.Detail>
-    <local:MainPage/>
+    <local:MainPage />
   </MasterDetailPage.Detail>
 </MasterDetailPage>
