--- a/Figaro/Figaro/Views/PlatosPage.xaml
+++ b/Figaro/Figaro/Views/PlatosPage.xaml
@@ -3,8 +3,11 @@
               xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
               xmlns:local="clr-namespace:Figaro"
               x:Class="Figaro.Views.PlatosPage"
-             xmlns:ui="clr-namespace:Figaro.UI;assembly=Figaro"
-             BindingContext="{Binding MainViewModel, Source={StaticResource ViewModelLocator}}">
+              xmlns:ui="clr-namespace:Figaro.UI;assembly=Figaro"
+              BindingContext="{Binding MainViewModel, Source={StaticResource ViewModelLocator}}"
+              xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin.Abstractions"
+              x:Name="platosPage"
+              Title="Descubrir">
   
   <!--<ContentPage.BindingContext>
     <ViewModels:MainViewModel />
@@ -23,7 +26,9 @@
         TextColor="White"
         BackgroundColor="Green"
         Command="{Binding Refresh}" />-->
-
+    
+    <Label x:Name="StatusMessage" Text="{Binding StatusMessage}" />
+    
     <ActivityIndicator IsRunning="{Binding IsBusy}"
                        IsVisible="{Binding IsBusy}" />
   
@@ -35,37 +40,38 @@
         <DataTemplate>
            <ViewCell>
              <StackLayout Orientation="Horizontal" Padding="12,6">
-              <Image Source="{Binding Imagen}" WidthRequest="100.0" HeightRequest="100.0"/>
-              <Grid>
-                <Grid.RowDefinitions>
-                  <RowDefinition Height="*"/>
-                  <RowDefinition Height="2*"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                  <ColumnDefinition Width="2*"/>
-                  <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Label Text="{Binding Titulo}"
-                       FontSize="24" 
-                       Grid.Row="0"
-                       Grid.Column="0"/>
-                <Label Text="{Binding Descripcion}" 
-                       FontSize="18"
-                       Opacity="0.6"
-                       Grid.Row="1"
-                       Grid.Column="0"/>
-                <Label Text="{Binding HorasCocinado}" 
-                       FontSize="14"
-                       Opacity="0.6"
-                       Grid.Row="0"
-                       Grid.Column="2"/>
-                <!--Falta imagen button (+)-->
-                <Button BackgroundColor="#CC0311" Image="" WidthRequest="10"
-                         Grid.Row="1"
-                         Grid.Column="2">
-                </Button>
+                <controls:CircleImage Source="{Binding Imagen}" WidthRequest="70.0" 
+                                      HeightRequest="70.0" Aspect="AspectFill" />
+                <Grid Padding="10,0,0,0">
+                  <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="2*"/>
+                  </Grid.RowDefinitions>
+                  <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="*"/>
+                  </Grid.ColumnDefinitions>
+                  <Label Text="{Binding Titulo}"
+                          FontSize="24" 
+                          Grid.Row="0"
+                          Grid.Column="0"/>
+                  <Label Text="{Binding Descripcion}" 
+                          FontSize="18"
+                          Opacity="0.6"
+                          Grid.Row="1"
+                          Grid.Column="0"/>
+                  <Label Text="{Binding HorasCocinado}" 
+                          FontSize="14"
+                          Opacity="0.6"
+                          Grid.Row="0"
+                          Grid.Column="2"/>
+                    <Button ClassId="{Binding Id}" BackgroundColor="#CC0311" Text="+" TextColor="White"
+                            FontSize="24" WidthRequest="10"
+                            Grid.Row="1" Grid.Column="2"
+                            Clicked="AnadirCesta_OnClick"
+                            />
                   
-              </Grid>
+                </Grid>
             </StackLayout>
           </ViewCell>
         </DataTemplate>
@@ -90,5 +96,5 @@
                HeightRequest="40" WidthRequest="40"  Aspect="AspectFit"/>
       </Grid>
     </StackLayout>
-  </StackLayout>
+  </StackLayout> 
 </ContentPage>
