--- a/WebServicesFigaro/Views/MenuMvc/Details.cshtml
+++ b/WebServicesFigaro/Views/MenuMvc/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebServicesFigaro.Models.Plato
+﻿@model WebServicesFigaro.Models.Menu
 
 @{
     ViewBag.Title = "Details";
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Plato</h4>
+    <h4>Menu</h4>
     <hr />
     <dl class="dl-horizontal">
 
@@ -37,6 +37,46 @@
         </dd>
 
         <dt>
+            Entrante@*@Html.DisplayNameFor(model => model.Entrante.Titulo)*@
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Entrante.Titulo)
+        </dd>
+
+        <dt>
+            Primero@*@Html.DisplayNameFor(model => model.Primero.Titulo)*@
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Primero.Titulo)
+        </dd>
+
+        <dt>
+            Segundo@*@Html.DisplayNameFor(model => model.Segundo.Titulo)*@
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Segundo.Titulo)
+        </dd>
+
+        <dt>
+            Guarnición@*@Html.DisplayNameFor(model => model.Guarnicion.Titulo)*@
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Guarnicion.Titulo)
+        </dd>
+
+        <dt>
+            Postre@*@Html.DisplayNameFor(model => model.Postre.Titulo)*@
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Postre.Titulo)
+        </dd>
+
+        <dt>
             Tipo Cocina@*@Html.DisplayNameFor(model => model.TipoCocina.Titulo)*@
         </dt>
 
@@ -50,14 +90,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.TiempoCocinado)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TipoPlato)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TipoPlato)
         </dd>
 
         <dt>
