Modificado Tipo de plato en Plato y Menu (EsPrimero, EsSegundo, etc.) Y ForeignKey en Menu

--- a/WebServicesFigaro/Views/MenuMvc/Details.cshtml
+++ b/WebServicesFigaro/Views/MenuMvc/Details.cshtml
@@ -33,7 +33,10 @@
 
         <dd>
             @Html.DisplayFor(model => model.Imagen)
-            <img src="@Url.Content(Model.Imagen)" alt="Imagen Plato" style="width:400px" />
+            @if (Model.Imagen != null)
+            {
+                <img src="@Url.Content(Model.Imagen)" alt="Imagen Plato" style="width:400px" />
+            }
         </dd>
 
         <dt>
