--- a/WebServicesFigaro/Views/PlatoMvc/Delete.cshtml
+++ b/WebServicesFigaro/Views/PlatoMvc/Delete.cshtml
@@ -52,11 +52,43 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TipoPlato)
+            @Html.DisplayNameFor(model => model.EsEntrante)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.TipoPlato)
+            @Html.DisplayFor(model => model.EsEntrante)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.EsPrimero)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EsPrimero)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.EsSegundo)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EsSegundo)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.EsGuarnicion)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EsGuarnicion)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.EsPostre)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.EsPostre)
         </dd>
 
         <dt>
