--- a/Figaro/Figaro/Views/PlatosPage.xaml
+++ b/Figaro/Figaro/Views/PlatosPage.xaml
@@ -31,7 +31,7 @@
     
     <ActivityIndicator IsRunning="{Binding IsBusy}"
                        IsVisible="{Binding IsBusy}" />
-  
+    
     <ListView x:Name="ListaPlatosView"
               ItemsSource="{Binding ListaPlatos}"
 		          HasUnevenRows="true"
@@ -60,7 +60,7 @@
                           Opacity="0.6"
                           Grid.Row="1"
                           Grid.Column="0"/>
-                  <Label Text="{Binding HorasCocinado}" 
+                  <Label Text="{Binding PrecioEuros}" 
                           FontSize="14"
                           Opacity="0.6"
                           Grid.Row="0"
@@ -77,6 +77,7 @@
         </DataTemplate>
       </ListView.ItemTemplate>
     </ListView>
+    
     <StackLayout HeightRequest="50" BackgroundColor="#ddd">
       <Grid>
         <Grid.ColumnDefinitions>
@@ -85,7 +86,6 @@
           <ColumnDefinition Width="*"/>
           <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-         <!--Cambiar buttons por imagenes con tap-->
         <Image x:Name="Menu_Button" Grid.Column="0" Source="icono_menu.png" 
                HeightRequest="40" WidthRequest="40"  Aspect="AspectFit"/>
         <Image x:Name="Plato_Button" Grid.Column="1" Source="icono_descubrir_select.png" 
