--- a/Figaro/Figaro/Views/MenuPage.xaml
+++ b/Figaro/Figaro/Views/MenuPage.xaml
@@ -4,6 +4,80 @@
              xmlns:local="clr-namespace:Figaro"
              x:Class="Figaro.Views.MenuPage"
              xmlns:ui="clr-namespace:Figaro.UI;assembly=Figaro"
-             BindingContext="{Binding MainViewModel, Source={StaticResource ViewModelLocator}}">
-  <Label Text="Lista menus" VerticalOptions="Center" HorizontalOptions="Center" />
+             BindingContext="{Binding MainViewModel, Source={StaticResource ViewModelLocator}}"
+             xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin.Abstractions"
+             x:Name="menuPage"
+             Title="Menus">
+  <StackLayout Orientation="Vertical">
+    
+    <Label x:Name="StatusMessage" Text="{Binding StatusMessage}" />
+    
+    <ActivityIndicator IsRunning="{Binding IsBusy}"
+                       IsVisible="{Binding IsBusy}" />
+    
+    <ListView x:Name="ListaMenusView"
+              ItemsSource="{Binding ListaMenus}"
+		          HasUnevenRows="true"
+              ItemTapped="ListView_OnItemTapped">
+      <ListView.ItemTemplate>
+        <DataTemplate>
+           <ViewCell>
+             <StackLayout Orientation="Horizontal" Padding="12,6">
+                <controls:CircleImage Source="{Binding Imagen}" WidthRequest="70.0" 
+                                      HeightRequest="70.0" Aspect="AspectFill" />
+                <Grid Padding="10,0,0,0">
+                  <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="2*"/>
+                  </Grid.RowDefinitions>
+                  <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="*"/>
+                  </Grid.ColumnDefinitions>
+                  <Label Text="{Binding Titulo}"
+                          FontSize="24" 
+                          Grid.Row="0"
+                          Grid.Column="0"/>
+                  <Label Text="{Binding Descripcion}" 
+                          FontSize="18"
+                          Opacity="0.6"
+                          Grid.Row="1"
+                          Grid.Column="0"/>
+                  <Label Text="{Binding PrecioEuros}" 
+                          FontSize="14"
+                          Opacity="0.6"
+                          Grid.Row="0"
+                          Grid.Column="2"/>
+                    <Button ClassId="{Binding Id}" BackgroundColor="#CC0311" Text="+" TextColor="White"
+                            FontSize="24" WidthRequest="10"
+                            Grid.Row="1" Grid.Column="2"
+                            Clicked="AnadirCesta_OnClick"
+                            />
+                  
+                </Grid>
+            </StackLayout>
+          </ViewCell>
+        </DataTemplate>
+      </ListView.ItemTemplate>
+    </ListView>
+    
+    <StackLayout HeightRequest="50" BackgroundColor="#ddd">
+      <Grid>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*"/>
+          <ColumnDefinition Width="*"/>
+          <ColumnDefinition Width="*"/>
+          <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Image x:Name="Menu_Button" Grid.Column="0" Source="icono_menu_select.png" 
+               HeightRequest="40" WidthRequest="40"  Aspect="AspectFit"/>
+        <Image x:Name="Plato_Button" Grid.Column="1" Source="icono_descubrir.png" 
+               HeightRequest="40" WidthRequest="40"  Aspect="AspectFit"/>
+        <Image x:Name="Chefs_Button" Grid.Column="2" Source="icon_chefs.png"
+               HeightRequest="40" WidthRequest="40"  Aspect="AspectFit"/>
+        <Image x:Name="Profile_Button" Grid.Column="3" Source="icono_profile.png"
+               HeightRequest="40" WidthRequest="40"  Aspect="AspectFit"/>
+      </Grid>
+    </StackLayout>
+  </StackLayout>
 </ContentPage>
