--- a/Figaro/Figaro/Views/MenuPage.xaml
+++ b/Figaro/Figaro/Views/MenuPage.xaml
@@ -7,7 +7,7 @@
              BindingContext="{Binding MainViewModel, Source={StaticResource ViewModelLocator}}"
              xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin.Abstractions"
              x:Name="menuPage"
-             Title="Menus">
+             Title="Menús">
   <StackLayout Orientation="Vertical">
     
     <Label x:Name="StatusMessage" Text="{Binding StatusMessage}" />
