--- a/Figaro/Figaro/Views/VerMenu.xaml
+++ b/Figaro/Figaro/Views/VerMenu.xaml
@@ -1,13 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Figaro.Views.VerPlato"            
+             x:Class="Figaro.Views.VerMenu"
              BindingContext="{Binding MainViewModel, Source={StaticResource ViewModelLocator}}"
-             Title="Plato">
-  
-  
+             Title="Menu">
+
   <StackLayout Orientation="Vertical"
-               Spacing="18" VerticalOptions="FillAndExpand">
+             Spacing="18" VerticalOptions="FillAndExpand">
     <Grid>
       <Grid.RowDefinitions>
         <RowDefinition Height="4*"/>
@@ -15,7 +14,7 @@
         <RowDefinition Height="5*"/>
       </Grid.RowDefinitions>
       <RelativeLayout Padding="0,0,0,0" Grid.Row="0">
-        <Image Source="{Binding PlatoSeleccionado.Imagen}" 
+        <Image Source="{Binding MenuSeleccionado.Imagen}"
                RelativeLayout.WidthConstraint=
                       "{ConstraintExpression Type=RelativeToParent, Property=Width}"
                RelativeLayout.HeightConstraint=
@@ -27,14 +26,14 @@
                 RelativeLayout.HeightConstraint=
                   "{ConstraintExpression Type=RelativeToParent, Property=Height}">
 
-          <Label Text="{Binding PlatoSeleccionado.Titulo}" VerticalOptions="End"
+          <Label Text="{Binding MenuSeleccionado.Titulo}" VerticalOptions="End"
               HorizontalOptions="StartAndExpand" FontSize="30" TextColor="White" Opacity="0.8"
               TranslationX="10" TranslationY="-10"/>
           <Grid VerticalOptions="End" HorizontalOptions="End" TranslationX="-10" TranslationY="-10" >
             <Grid.RowDefinitions>
               <RowDefinition Height="24"/>
               <RowDefinition Height="24"/>
-            </Grid.RowDefinitions> 
+            </Grid.RowDefinitions>
             <!--Stars Rating-->
             <StackLayout Orientation="Horizontal" HeightRequest="70" Grid.Row="0">
               <Grid>
@@ -52,7 +51,7 @@
                 <Image x:Name="starFive" HeightRequest="18" Grid.Column="4"/>
               </Grid>
             </StackLayout>
-            <Label Text="{Binding PlatoSeleccionado.HorasCocinado}" Grid.Row="1" FontSize="18" 
+            <Label Text="{Binding MenuSeleccionado.HorasCocinado}" Grid.Row="1" FontSize="18"
                   TextColor="White" HorizontalTextAlignment="End"/>
           </Grid>
         </Grid>
@@ -64,66 +63,66 @@
             <ColumnDefinition Width="40"/>
             <ColumnDefinition Width="*"/>
           </Grid.ColumnDefinitions>
-        <Label Text="NÚMERO DE PLATOS" HorizontalTextAlignment="Center" FontSize="16" Grid.Column="0" VerticalOptions="Center"/>
-        <!--<Entry Keyboard="Numeric" BackgroundColor="#aaa" Text="1" Grid.Column="1" 
+          <Label Text="NÚMERO DE MENÚS" HorizontalTextAlignment="Center" FontSize="16" Grid.Column="0" VerticalOptions="Center"/>
+          <!--<Entry Keyboard="Numeric" BackgroundColor="#aaa" Text="1" Grid.Column="1" 
                VerticalOptions="Center" HorizontalOptions="Center"
                 WidthRequest="40"/>-->
-        <Picker x:Name="NumeroPlatos" HorizontalOptions="FillAndExpand" Grid.Column="1" >
-          <Picker.Items>
-            <x:String>1</x:String>
-            <x:String>2</x:String>
-            <x:String>3</x:String>
-            <x:String>4</x:String>
-            <x:String>5</x:String>
-            <x:String>6</x:String>
-            <x:String>7</x:String>
-            <x:String>8</x:String>
-            <x:String>9</x:String>
-            <x:String>10</x:String>
-            <x:String>11</x:String>
-            <x:String>12</x:String>
-            <x:String>13</x:String>
-            <x:String>14</x:String>
-            <x:String>10</x:String>
-            <x:String>15</x:String>
-            <x:String>16</x:String>
-            <x:String>17</x:String>
-            <x:String>18</x:String>
-            <x:String>19</x:String>
-            <x:String>20</x:String>
-          </Picker.Items>
-          <Picker.SelectedIndex>0</Picker.SelectedIndex>
-        </Picker>
-        <Button BackgroundColor="#CC0311" Grid.Column="2" VerticalOptions="Center" Text="Añadir" TextColor="White">
-          <!--<Label FontSize="36" Text="ADD" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" TextColor="White"/>-->
-        </Button> 
+          <Picker x:Name="NumeroMenus" HorizontalOptions="FillAndExpand" Grid.Column="1" >
+            <Picker.Items>
+              <x:String>1</x:String>
+              <x:String>2</x:String>
+              <x:String>3</x:String>
+              <x:String>4</x:String>
+              <x:String>5</x:String>
+              <x:String>6</x:String>
+              <x:String>7</x:String>
+              <x:String>8</x:String>
+              <x:String>9</x:String>
+              <x:String>10</x:String>
+              <x:String>11</x:String>
+              <x:String>12</x:String>
+              <x:String>13</x:String>
+              <x:String>14</x:String>
+              <x:String>10</x:String>
+              <x:String>15</x:String>
+              <x:String>16</x:String>
+              <x:String>17</x:String>
+              <x:String>18</x:String>
+              <x:String>19</x:String>
+              <x:String>20</x:String>
+            </Picker.Items>
+            <Picker.SelectedIndex>0</Picker.SelectedIndex>
+          </Picker>
+          <Button BackgroundColor="#CC0311" Grid.Column="2" VerticalOptions="Center" Text="Añadir" TextColor="White">
+            <!--<Label FontSize="36" Text="ADD" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" TextColor="White"/>-->
+          </Button>
         </Grid>
       </StackLayout>
-      <ScrollView Orientation="Vertical" VerticalOptions="FillAndExpand" Grid.Row="2">  
+      <ScrollView Orientation="Vertical" VerticalOptions="FillAndExpand" Grid.Row="2">
         <StackLayout Orientation="Vertical" VerticalOptions="FillAndExpand">
-          <Label Text="{Binding PlatoSeleccionado.Descripcion}" FontSize="14" TranslationX="10"/>
+          <Label Text="{Binding MenuSeleccionado.Descripcion}" FontSize="14" TranslationX="10"/>
           <Grid x:Name="GridTab" Padding="0,14,0,0">
             <Grid.ColumnDefinitions>
               <ColumnDefinition Width="*"/>
               <ColumnDefinition Width="*"/>
               <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Label x:Name="IngredientesTab" Text="INGREDIENTES" FontSize="14"  
+            <Label x:Name="IngredientesTab" Text="INGREDIENTES" FontSize="14"
                    FontAttributes="Bold" TextColor="#CC0311"  Grid.Column="0" HorizontalOptions="Center"/>
-            <Label x:Name="UtensiliosTab" Text="UTENSILIOS" FontSize="14"  
+            <Label x:Name="UtensiliosTab" Text="UTENSILIOS" FontSize="14"
                    FontAttributes="None"  Grid.Column="1" HorizontalOptions="Center"/>
-            <Label x:Name="OpinionesTab" Text="OPINIONES" FontSize="14"  
+            <Label x:Name="OpinionesTab" Text="OPINIONES" FontSize="14"
                    FontAttributes="None"  Grid.Column="2" HorizontalOptions="Center"/>
-            <BoxView x:Name="LineaIngredientesTab" Color="#CC0311" HeightRequest="0.5" 
+            <BoxView x:Name="LineaIngredientesTab" Color="#CC0311" HeightRequest="0.5"
                      VerticalOptions="End" Grid.Column="0" IsVisible="True"/>
-            <BoxView x:Name="LineaUtensiliosTab" Color="#CC0311" HeightRequest="0.5" 
+            <BoxView x:Name="LineaUtensiliosTab" Color="#CC0311" HeightRequest="0.5"
                      VerticalOptions="End" Grid.Column="1" IsVisible="False"/>
-            <BoxView x:Name="LineaOpinionesTab" Color="#CC0311" HeightRequest="0.5" 
+            <BoxView x:Name="LineaOpinionesTab" Color="#CC0311" HeightRequest="0.5"
                      VerticalOptions="End" Grid.Column="2" IsVisible="False"/>
           </Grid>
-          <Label x:Name="TabAMostrar" Text="{Binding PlatoSeleccionado.Ingredientes}" FontSize="14" Opacity="0.7"  TranslationX="10" TranslationY="14" /> 
+          <Label x:Name="TabAMostrar" Text="{Binding MenuSeleccionado.Ingredientes}" FontSize="14" Opacity="0.7"  TranslationX="10" TranslationY="14" />
         </StackLayout>
       </ScrollView>
     </Grid>
-  </StackLayout>        
+  </StackLayout>
 </ContentPage>
