--- a/WebServicesFigaro/Views/MenuMvc/Create.cshtml
+++ b/WebServicesFigaro/Views/MenuMvc/Create.cshtml
@@ -34,7 +34,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.EntranteId, "EntranteId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("EntranteId", null, htmlAttributes: new { @class = "form-control" })
+                @*@Html.DropDownList("EntranteId", null, htmlAttributes: new { @class = "form-control" })*@
+                @Html.DropDownListFor(m => m.EntranteId, (SelectList)ViewBag.EntranteId, string.Empty, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.EntranteId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -42,7 +43,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PrimeroId, "PrimeroId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("PrimeroId", null, htmlAttributes: new { @class = "form-control" })
+                @*@Html.DropDownList("PrimeroId", null, htmlAttributes: new { @class = "form-control" })*@
+                @Html.DropDownListFor(m => m.PrimeroId, (SelectList)ViewBag.PrimeroId, string.Empty, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.PrimeroId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -50,7 +52,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.SegundoId, "SegundoId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("SegundoId", null, htmlAttributes: new { @class = "form-control" })
+                @*@Html.DropDownList("SegundoId", null, htmlAttributes: new { @class = "form-control" })*@
+                @Html.DropDownListFor(m => m.SegundoId, (SelectList)ViewBag.SegundoId, string.Empty, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.SegundoId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -58,7 +61,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.GuarnicionId, "GuarnicionId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("GuarnicionId", null, htmlAttributes: new { @class = "form-control" })
+                @*@Html.DropDownList("GuarnicionId", null, htmlAttributes: new { @class = "form-control" })*@
+                @Html.DropDownListFor(m => m.GuarnicionId, (SelectList)ViewBag.GuarnicionId, string.Empty, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.GuarnicionId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -66,7 +70,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PostreId, "PostreId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("PostreId", null, htmlAttributes: new { @class = "form-control" })
+                @*@Html.DropDownList("PostreId", null, htmlAttributes: new { @class = "form-control" })*@
+                @Html.DropDownListFor(m => m.PostreId, (SelectList)ViewBag.PostreId, string.Empty, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.PostreId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -132,6 +137,15 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Utensilios, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Utensilios, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.EstaOculto, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @*@Html.EditorFor(model => model.EstaActivo, new { htmlAttributes = new { @class = "form-control" } })*@
+                @Html.CheckBoxFor(model => model.EstaOculto, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.EstaOculto, "", new { @class = "text-danger" })
             </div>
         </div>
 
